[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexssl-cli"
version = "0.1.0"
description = "Official HEXSSL command-line toolkit for HSTS, HTTPS and domain diagnostics."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name="HEXSSL", email="sales@hexssl.com" }
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "requests>=2.31"
]

[project.scripts]
hexssl-cli = "hexssl_cli.cli:app"
